Avoid instantiating Boolean objects; reference Boolean.TRUE or Boolean.FALSE or call Boolean.valueOf() instead.
git-svn-id: https://svn.apache.org/repos/asf/empire-db/trunk@1367530 13f79535-47bb-0310-9956-ffa450edef68